# BazisCoreApi-example

./: BazisCoreApi-example.sln  README.md
PythonAPI/: PythonAPI.py  PythonAPI.pyproj  pyproject.toml
PythonAPI/BazisCorePythonAPI.egg-info/: SOURCES.txt
PythonAPI/src/BazisCoreAPI/: APIClass.py  PythonAPI.py  core.py  setup.py
PythonAPI/src/BazisCoreAPI.egg-info/: PKG-INFO  SOURCES.txt
PythonAPI/src/BazisCoreAPI/libs/BazisCorePythonAPI.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
PythonAPI/src/BazisCorePythonAPI.egg-info/: SOURCES.txt  top_level.txt
TestAPIConnection/: TestAPIConnection.py  TestAPIConnection.pyproj
TestLib/: Class1.cs  TestLib.csproj
TestLib/bats/: BuildPythonPackage.bat  BuildTestLib.bat  UpdateDeps.bat
